--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="DnDGenerator.MainWindow"  
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
-  Title="D&amp;D Generator" Height="337.215" Width="545.409" MinWidth="550" MinHeight="350" SizeToContent="WidthAndHeight"
+  Title="D&amp;D Generator" Height="337.215" Width="545.409" MinWidth="550" MinHeight="350"
   Background="Black">
     <Window.Resources>
         <LinearGradientBrush x:Key="GrayBlueGradientBrush" StartPoint="0,0" EndPoint="1,1">
@@ -17,7 +17,7 @@
     </Window.Resources>
 
     <!-- Background Container -->
-    <Grid x:Name="MainGrid" Background="White" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="{Binding ActualWidth, ElementName=MainWindow}" Height="{Binding ActualHeight, ElementName=MainWindow}">
+    <Grid x:Name="MainGrid" Background="White" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" >
         <ListBox x:Name="MainList" VerticalAlignment="Top" Height="Auto" Width="{Binding ActualWidth, ElementName=MainGrid}">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
